--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,6 +2,9 @@ h1 a {
     color: #FCA205;
     font-family: 'Lobster';
 }
+body {
+    padding-left: 15px;
+}
 
 .page-header {
     background-color: #ff9400;
