--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,9 +1,6 @@
 h1 a {
-    color: #FCA205;
+    color: #E4F7BA;
     font-family: 'Lobster';
-}
-body {
-    padding-left: 15px;
 }
 
 .page-header {
