--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,10 +1,10 @@
 h1 a {
-    color: #E4F7BA;
+    color: #FCA205;
     font-family: 'Lobster';
 }
 
 .page-header {
-    background-color: #ff9400;
+    background-color: #CEF279;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -24,7 +24,8 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #828282;
+    color: #476600;
+    float: right;
 }
 
 .save {
@@ -44,8 +45,9 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+    color: #476600;
 }
 
-.post h1 a, .post h1 a:visited {
-    color: #000000;
+.post h1 a, .post h1 a:visited .post {
+    color: #476600;
 }
