--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,15 +4,16 @@ h1 a {
 }
 
 .page-header {
-    background-color: #CEF279;
+    background-color: #FFB2D9;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #D9418C;
     font-size: 36pt;
     text-decoration: none;
+    text-shadow:1px 1px 1px #fff;
 }
 
 .content {
@@ -24,7 +25,7 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #476600;
+    color: #ff73be;
     float: right;
 }
 
@@ -45,10 +46,12 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
-    color: #476600;
+    color: #ff73be;
 }
 
 .post h1 a, .post h1 a:visited .post {
     font-family: 'Lobster', cursive;
-    color: #476600;
+    color: #ff73be;
 }
+
+.post h1 a:hover{color: #da70d6;}
